add location_id to consultation
